--- a/kafka/values.yaml
+++ b/kafka/values.yaml
@@ -90,3 +90,36 @@ schemaRegistry:
   svcName: schema-registry-svc
   ingressName: schema-registry-ingress
   ingressClass: nginx
+
+kafkaConnect:
+  name: minio-connect-cluster
+  spec:
+    version: 3.9.0
+    replicas: 1
+    image: microwave1005/kafka-connect-s3:0.0.1
+    bootstrapServers: kafka-cluster-0-kafka-bootstrap.kafka.svc.cluster.local:9092
+  config:
+    groupId: connect-cluster
+    offsetStorageTopic: connect-offsets
+    configStorageTopic: connect-configs
+    statusStorageTopic: connect-status
+    configStorageReplicationFactor: 1
+    offsetStorageReplicationFactor: 1
+    statusStorageReplicationFactor: 1
+
+kafkaConnector:
+  name: minio-sink-connector
+  config:
+    tasksMax: 1
+    topics: "transaction-topic"
+    s3BucketName: "bronze-layer"
+    storeUrl: http://minio.minio.svc.cluster.local:9000
+    s3PartSize: 5242880
+    s3FlushSize: 4000000
+    schemaRegistryUrl: http://schema-registry-svc:8081
+
+secret:
+  name: minio-credentials
+  data:
+    aws_access_key_id: minio
+    aws_secret_access_key: minio123
