--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ fastavro==1.11.1
 cachetools==6.1.0
 authlib==1.6.0
 apache-flink==2.0.0
+pydantic==2.10.3
+openai==1.94.0
+minio==7.2.15
+pymilvus==2.5.12
