prepare for deploying airflow etl and indexing job, api model

--- a/helm/api/templates/deployment.yaml
+++ b/helm/api/templates/deployment.yaml
@@ -1,58 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.service.name }}
-  namespace: {{ .Values.service.namespace }}
+  name: {{ .Values.name }}
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ .Values.service.name }}
+      app: {{ .Values.name }}
   template:
     metadata:
       labels:
-        app: {{ .Values.service.name }}
+        app: {{ .Values.name }}
     spec:
       containers:
-        - name: api
+        - name: {{ .Values.name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            - name: S3_ENDPOINT
-              value: {{ .Values.env.S3_ENDPOINT | quote }}
-            - name: MLFLOW_ENDPOINT
-              value: {{ .Values.env.MLFLOW_ENDPOINT | quote }}
-            - name: PARENT_RUN_ID
-              value: {{ .Values.env.PARENT_RUN_ID | quote }}
-            - name: TRANSFORMER_ARTIFACT_PATH
-              value: {{ .Values.env.TRANSFORMER_ARTIFACT_PATH | quote }}
-            - name: EVIDENTLY_WORKSPACE
-              value: {{ .Values.env.EVIDENTLY_WORKSPACE | quote }}
-            - name: FSSPEC_S3_ENDPOINT_URL
-              value: {{ .Values.env.FSSPEC_S3_ENDPOINT_URL | quote }}
-            - name: JAEGER_AGENT_HOST
-              value: {{ .Values.env.JAEGER_AGENT_HOST | quote }}
-            - name: EVIDENTLY_PROJECT_NAME
-              value: {{ .Values.env.EVIDENTLY_PROJECT_NAME | quote }}
-            - name: S3_ACCESS_KEY
+            - name: KAFKA_BROKER
+              value: {{ .Values.env.KAFKA_BROKER | quote }}
+            - name: KAFKA_TOPIC
+              value: {{ .Values.env.KAFKA_TOPIC | quote }}
+            - name: SCHEMA_REGISTRY_URL
+              value: {{ .Values.env.SCHEMA_REGISTRY_URL | quote }}
+            - name: SLACK_CHANNEL
+              value: {{ .Values.env.SLACK_CHANNEL | quote }}
+            - name: SLACK_BOT_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.secrets.name }}
-                  key: {{ .Values.secrets.accessKeyIdKey }}
-            - name: S3_SECRET_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.secrets.name }}
-                  key: {{ .Values.secrets.secretAccessKeyKey }}
-            - name: FSSPEC_S3_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.secrets.name }}
-                  key: {{ .Values.secrets.accessKeyIdKey }}
-            - name: FSSPEC_S3_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.secrets.name }}
-                  key: {{ .Values.secrets.secretAccessKeyKey }}
+                  name: {{ .Values.secrets.slackSecretName }}
+                  key: {{ .Values.secrets.slackBotTokenKey }}
           ports:
-            - containerPort: {{ .Values.service.ports.http }}
+            - containerPort: 8000
