--- a/helm/api/values.yaml
+++ b/helm/api/values.yaml
@@ -1,29 +1,26 @@
+name: fraud-detection-api
+namespace: api
+
 replicaCount: 1
 
 image:
   repository: microwave1005/fraud-detection-api
-  tag: latest 
+  tag: latest
   pullPolicy: IfNotPresent
 
-service:
-  name: fraud-detection-api
-  namespace: api
-  ports:
-    http: 8000
-    metrics: 8001
-
 env:
-  S3_ENDPOINT: "minio.minio.svc.cluster.local:9000"
-  EVIDENTLY_WORKSPACE: "http://35.202.139.205:8000/"
-  FSSPEC_S3_ENDPOINT_URL: "http://minio.minio.svc.cluster.local:9000"
+  KAFKA_BROKER: "kafka.kafka.svc.cluster.local:9092"
+  KAFKA_TOPIC: "fraud_predict"
+  SCHEMA_REGISTRY_URL: "http://schema-registry.kafka.svc.cluster.local:8081"
+  SLACK_CHANNEL: "#fraud-alerts"
 
 secrets:
-  name: minio-creds
-  accessKeyIdKey: access_key
-  secretAccessKeyKey: secret_key
+  slackSecretName: slackbot-secret
+  slackBotTokenKey: slackbot-token
+  slackBotToken: "xoxb-your-slack-bot-token"
 
 ingress:
-  enabled: false
+  enabled: true
   ingressClassName: nginx
+  host: fraud-api.local
   annotations: {}
-  rules: []
