--- a/kafka/kafka_minio_kctr.yaml
+++ b/kafka/kafka_minio_kctr.yaml
@@ -15,7 +15,7 @@ spec:
     s3.region: "us-west-1"
     store.url: "http://minio.minio.svc.cluster.local:9000"
     s3.part.size: 5242880 
-    flush.size: 243869 
+    flush.size: 1000000
     storage.class: "io.confluent.connect.s3.storage.S3Storage"
     format.class: "io.confluent.connect.s3.format.avro.AvroFormat"
     schema.compatibility: "NONE"
