finish airflow job

--- a/requirements_dag.txt
+++ b/requirements_dag.txt
@@ -1,4 +1,6 @@
 avro-python3==1.10.2
+aioboto3==15.0.0
+boto3==1.38.27
 pandas==2.3.0
 fastavro==1.11.1
 cachetools==6.1.0
@@ -8,3 +10,7 @@ pymilvus==2.5.12
 slack_sdk==3.36.0
 clickhouse_connect==0.8.18
 apache-airflow==3.0.2
+llama-index==0.12.49
+llama-index-vector-stores-chroma==0.4.2
+llama-index-llms-bedrock==0.3.8
+llama-index-llms-bedrock-converse==0.7.5
