--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,24 +1,12 @@
-torch>=1.9.0
-dgl>=0.8.0
-xgboost>=1.5.0
-scikit-learn>=1.0.0
-numpy>=1.21.0
-pandas>=1.3.0
-networkx>=2.6.0
-joblib>=1.1.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
-tqdm>=4.62.0
-scipy>=1.7.0
-flask>=2.0.0
-gunicorn>=20.1.0
-plotly>=5.0.0
-shap>=0.40.0
-pytest>=6.2.0
-black>=21.0.0
-flake8>=4.0.0 
-chromadb==1.0.15
-llama-index==0.12.49
-llama-index-vector-stores-chroma-0.4.2
-llama-index-llms-bedrock-0.3.8
-llama-index-llms-bedrock-converse-0.7.5
+seaborn==0.13.2
+torch==2.7.1
+torch_geometric==2.6.1
+numpy==2.1.3
+fastapi==0.116.1
+dotenv==0.9.9
+slack_sdk==3.36.0
+pandas
+network
+scikit-learn
+confluent_kafka 
+fastavro
