--- a/requirements_dag.txt
+++ b/requirements_dag.txt
@@ -1,14 +1,9 @@
-avro-python3==1.10.2
-aioboto3==15.0.0
-boto3==1.38.27
-pandas==2.3.0
-fastavro==1.11.1
-cachetools==6.1.0
-authlib==1.6.0
-minio==7.2.15
-pymilvus==2.5.12
-slack_sdk==3.36.0
-clickhouse_connect==0.8.18
+avro-python3
+fastavro
+cachetools
+minio
+slack_sdk
+clickhouse_connect
 apache-airflow==3.0.2
 llama-index==0.12.49
 llama-index-vector-stores-chroma==0.4.2
