--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,10 +1,14 @@
 FROM python:3.11.11-slim
 
-RUN pip install --no-cache-dir fastapi[all] scikit-learn requests clickhouse-driver slack_sdk
-
 WORKDIR /app
+
 COPY ./src/client ./client
+COPY ./requirements_api.txt ./requirements_api.txt
+
+RUN pip install -r ./requirements_api.txt
 
 EXPOSE 8000
 
-CMD ["uvicorn", "client.api:app", "--host", "0.0.0.0", "--port", "8000"]
+WORKDIR /app/client
+
+CMD ["uvicorn", "infer:app", "--host", "0.0.0.0", "--port", "8000"]
