--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,12 +1,14 @@
 seaborn==0.13.2
-torch==2.7.1
-torch_geometric==2.6.1
 numpy==2.1.3
 fastapi==0.116.1
 dotenv==0.9.9
 slack_sdk==3.36.0
+uvicorn
 pandas
 network
 scikit-learn
 confluent_kafka 
 fastavro
+httpx
+cachetools
+authlib
